Upgrade 5.1 to 6.2, retain custom code and clean up source code as much as possible.